# gnss-sdr-monitor

./: README.md
src/: AltitudeWidget.cpp  AltitudeWidget.h  CMakeLists.txt  ChannelTableModel.cpp  ChannelTableModel.h  altitude_widget.cpp  altitude_widget.h  channel_table_model.cpp  channel_table_model.h  cn0_delegate.cpp  constellation_delegate.cpp  constellation_delegate.h  dop_widget.cpp  dop_widget.h  doppler_delegate.cpp  main.cpp  main_window.cpp  main_window.h  main_window.ui  monitor_pvt_wrapper.cpp  monitor_pvt_wrapper.h  preferences_dialog.cpp  resources.qrc  telecommand_widget.cpp  telecommand_widget.h  telnet_manager.cpp  telnet_manager.h
src/PVT/: CMakeLists.txt  CustomTableView.cpp  CustomTableView.h  DopWidget.cpp  DopWidget.h  PVTTableModel.cpp  PVTTableModel.h
src/alert/: 1.txt  AlertWidget.cpp  AlertWidget.h  CMakeLists.txt
src/channel/: CMakeLists.txt  ChannelTableModel.cpp  ChannelTableModel.h  Cn0Delegate.cpp  Cn0Delegate.h  ConstellationDelegate.cpp  ConstellationDelegate.h  CustomChannelView.cpp  CustomChannelView.h  DopplerDelegate.cpp  DopplerDelegate.h  LedDelegate.cpp  LedDelegate.h
src/lib/: CMakeLists.txt  ChannelStruct.h  CustomChannelView.cpp  CustomChannelView.h  PVTStruct.h  Variance.h
src/plot/: CMakeLists.txt  CustomChartView.cpp  CustomChartView.h  CustomChartViewForMultiCNo.cpp  CustomChartViewForMultiCNo.h  ThreadForPlot.cpp  ThreadForPlot.h
src/qml/: main.qml
src/socket/: CMakeLists.txt  SocketGnss.cpp  SocketGnss.h  SocketPVT.cpp  SocketPVT.h  monitor_pvt_wrapper.h
src/styles/: CMakeLists.txt  CustomBar.cpp  CustomBar.h  CustomTabWidget.cpp  CustomTabWidget.h  CustomToolBar.cpp  CustomToolBar.h  TabBarStyle.cpp  TabBarStyle.h
